# pulsar-cli

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: fn_cluster.rs  fn_tenant.rs  format.rs  main.rs
src/lib/: cluster.rs  lib.rs  models.rs  tenant.rs
